# bitcoin-svm-bridge

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
.github/workflows/: anchor.yml
block_relayer/: Cargo.toml  README.md  example.toml
block_relayer/for_tests/: .bitcoin.conf
block_relayer/src/: config.rs  lib.rs  main.rs  merkle.rs  relay_program_interaction.rs  utxo_db.rs
block_relayer/tests/: integration.rs
bridge_form/: index.html
btc_faucet/: Cargo.toml  README.md
btc_faucet/src/: main.rs
docs/diagrams/: bridge_deposit.md  bridge_withdrawal.md
docs/swagger/: tx_relay.yml
programs/btc-relay/: Cargo.toml  README.md
programs/btc-relay/src/: arrayutils.rs  errors.rs  events.rs  instructions.rs  lib.rs  state.rs  structs.rs  txutils.rs  utils.rs
tests/: btc-relay.ts
utils/: txutils.rs  txverify.rs
