[workspace]
members = [
    "programs/*"
]

exclude = [
    "block_relayer",
    "btc_faucet"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# for more info on these patches, check https://github.com/solana-labs/solana/blob/27eff8408b7223bb3c4ab70523f8a8dca3ca6645/Cargo.toml#L475
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/artemii235/AEADs"
rev = "874045c42beb11fc8a547cb1c67bf5895172a2d1"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
