[package]
name = "block_relayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "block_relayer_lib"

[dependencies]
anchor-client = "=0.30.1"
actix-cors = "0.7.0"
actix-web = "4"
base64 = "0.22"
bitcoin = { version = "=0.32.2", default-features = false }
bitcoincore-rpc = "0.19.0"
btc-relay = { path = "../programs/btc-relay" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
solana-transaction-status = "1.18.18"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
bollard = "0.16.1"
once_cell = "1"
testcontainers = "0.20.0"
