[package]
name = "block_relayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "block_relayer_lib"

[dependencies]
anchor-client = "=0.30.1"
actix-cors = "0.7.0"
actix-web = "4"
actix-web-lab = "0.22"
base64 = "0.22"
bitcoin = { version = "=0.32.2", default-features = false }
bitcoincore-rpc = "0.19.0"
btc-relay = { path = "../programs/btc-relay" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
rusqlite = "0.32"
serde = { version = "1.0", features = ["derive"] }
solana-transaction-status = "1.18.18"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
bollard = "0.16.1"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde_json = "1"
testcontainers = "0.20.0"

# for more info on these patches, check https://github.com/solana-labs/solana/blob/27eff8408b7223bb3c4ab70523f8a8dca3ca6645/Cargo.toml#L475
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/artemii235/AEADs"
rev = "874045c42beb11fc8a547cb1c67bf5895172a2d1"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"