[package]
name = "btc-relay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btc_relay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
bitcoin_testnet = []
mocked = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
bitcoin = { version = "=0.32.2", default-features = false }
bytemuck = { version = "1.14.0", features = ["min_const_generics"] }
